--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>imankitkalirawana</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/css/Theme.css" />
+    <link rel="stylesheet" href="/src/css/Fonts.css" />
     <!-- Google Font Link for Icons -->
     <link
       rel="stylesheet"
