--- a/index.html
+++ b/index.html
@@ -1,30 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Bhuneshvar - Web Developer</title>
     <meta charset="utf-8" />
-    <title>imankitkalirawana</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/Theme.css" />
-    <link rel="stylesheet" href="/src/css/Fonts.css" />
-    <!-- Google Font Link for Icons -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    <meta
+      name="description"
+      content="Discover the portfolio of Bhuneshvar, a highly skilled web developer well-versed in ReactJS and NodeJS. With a passion for freelancing, I create dynamic and user-friendly web solutions tailored to your needs."
     />
+    <meta name="keywords" content="{item.keywords}" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ItemList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "item": {
+              "@type": "Skill",
+              "url": "https://www.divinelydeveloper.me/projects",
+              "name": "ReactJS Development",
+              "description": "This course covers ReactJS development and its modern web application capabilities.",
+              "provider": {
+                "@type": "Organization",
+                "name": "Lovely Professional University",
+                "sameAs": "https://www.lpu.in"
+              }
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "item": {
+              "@type": "Skill",
+              "url": "https://www.divinelydeveloper.me/projects",
+              "name": "NodeJS Development",
+              "description": "Learn NodeJS and build server-side applications with JavaScript.",
+              "provider": {
+                "@type": "Organization",
+                "name": "Lovely Professional University",
+                "sameAs": "https://www.lpu.in"
+              }
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "item": {
+              "@type": "Skill",
+              "url": "https://www.divinelydeveloper.me/projects",
+              "name": "PHP Web Development",
+              "description": "Explore PHP for web development and create dynamic, database-driven websites.",
+              "provider": {
+                "@type": "Organization",
+                "name": "Lovely Professional University",
+                "sameAs": "https://www.lpu.in"
+              }
+            }
+          }
+        ]
+      }
+    </script>
+
+    <link rel="icon" href="favicon.ico" />
     <link
       rel="stylesheet"
       href="https://pro.Fontawesome.com/releases/v6.0.0-beta3/css/all.css"
     />
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
