Add keywords to meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
       name="description"
       content="Discover the portfolio of Bhuneshvar, a highly skilled web developer well-versed in ReactJS and NodeJS. With a passion for freelancing, I create dynamic and user-friendly web solutions tailored to your needs."
     />
-    <meta name="keywords" content="{item.keywords}" />
+    <!-- keywords -->
+    <meta
+      name="keywords"
+      content="Bhuneshvar, Bhuneshvar portfolio, Bhuneshvar
+    web developer, Bhuneshvar web developer portfolio, Bhuneshvar Sharma web
+    developer portfolio website, Bhuneshvar web developer portfolio website
+    india, Ankit Kalirawana, Ankit Kalirawana web developer, Ankit Kalirawana divinely developer, divinely developer, reactjs, nodejs, mongodb, html css projects"
+    />
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
